# Static-Program-Analyzer

./: .gitignore  README.md  check-submission.py
Team21/Code21/src/integration_testing/: CMakeLists.txt
Team21/Code21/src/integration_testing/src/: PKBtestHelpers.cpp  PKBtestHelpers.h  PopulatePKBHelper.cpp  PopulatePKBHelper.h  QPSUtilities.cpp  QPSUtilities.h  QueryTestUtilities.h  SystemTest.cpp  TestAssignPatternClause.cpp  TestFrontEnd.cpp  TestIfPatternClause.cpp  TestMultiClause.cpp  TestNextClauses.cpp  TestPKB.cpp  TestPKBCFGRelationships.cpp  TestQPS.cpp  TestQPSParser.cpp  TestSelectClause.cpp  TestSuchThatClauses.cpp  TestWhilePatternClause.cpp  TestWithClause.cpp
Team21/Code21/src/spa/: CMakeLists.txt
Team21/Code21/src/spa/src/: AssignStatement.cpp  AssignStatement.h  CallStatement.cpp  CallStatement.h  Entity.h  IfStatement.cpp  IfStatement.h  PKB.h  Parser.cpp  Parser.h  PrintStatement.cpp  PrintStatement.h  ReadStatement.cpp  ReadStatement.h  Statement.cpp  Statement.h  WhileStatement.cpp  WhileStatement.h
Team21/Code21/src/spa/src/PKB/: CFGManager.cpp  CFGManager.h  CFGStorage.cpp  CFGStorage.h  EntityManager.cpp  EntityManager.h  PKB.cpp  PKB.h  PatternManager.cpp  PatternManager.h  PopulateFacade.cpp  PopulateFacade.h  QueryFacade.cpp  QueryFacade.h  RelationshipCache.cpp  RelationshipCache.h  RelationshipHashFactory.cpp  RelationshipHashFactory.h  RelationshipHashkeyFactory.cpp  RelationshipHashkeyFactory.h  RelationshipLiteralHashkeyGenerator.cpp  RelationshipLiteralHashkeyGenerator.h  RelationshipManager.cpp  RelationshipManager.h  RelationshipStorage.cpp  RelationshipStorage.h  RelationshipSynonymHashkeyGenerator.cpp  RelationshipSynonymHashkeyGenerator.h
Team21/Code21/src/spa/src/PKBStorageClasses/: EntityFactory.cpp  EntityFactory.h  RelationshipFactory.cpp  RelationshipFactory.h  StorageKey.cpp  StorageKey.h
Team21/Code21/src/spa/src/exceptions/: parser_error.h  semantic_error.h  syntax_error.cpp  syntax_error.h
Team21/Code21/src/spa/src/query/: attr_ref.cpp  attr_ref.h  boolean.h  declaration.cpp  declaration.h  design_entity.cpp  design_entity.h  element.h  expression.cpp  expression.h  pattern_clause.cpp  pattern_clause.h  query.cpp  query.h  query_exceptions.h  quoted_identifier.cpp  quoted_identifier.h  ref.h  relationship.cpp  relationship.h  such_that_clause.cpp  such_that_clause.h  synonym.cpp  synonym.h  underscore.h  with_clause.cpp  with_clause.h  with_ref.cpp  (+1 more)
Team21/Code21/src/unit_testing/: CMakeLists.txt
Team21/Code21/src/unit_testing/src/: PKBtestHelpers.cpp  PKBtestHelpers.h  TestEnitityFactory.cpp  TestEntities.cpp  TestEntityFactory.cpp  TestEntityManager.cpp  TestPKBHashFunctions.cpp  TestPatternManager.cpp  TestPopulateFacade.cpp  TestQueryFacade.cpp  TestRelationshipFactory.cpp  TestRelationshipHashFactory.cpp  TestRelationshipLiteralHashGenerator.cpp  TestRelationshipManager.cpp  TestRelationshipSynonymHashGenerator.cpp  TestRelationships.cpp  TestValidator.cpp
(+688 files in other folders)
